# goalchain

./: .gitignore  CLAUDE.md  LICENSE  README.md  deploy-local.sh  deploy-prod.sh  deploy-upgrade.sh  render.yaml
.github/workflows/: ci.yml
backend/: .env.example  eslint.config.js  package-lock.json  package.json  tsconfig.json
backend/data/: worldcup.db
backend/idl/: prediction_market.json
backend/src/: config.ts  index.ts  logger.ts
contracts/prediction-market/: Anchor.toml  Cargo.toml  package-lock.json  package.json  tsconfig.json
contracts/prediction-market/programs/prediction-market/: Cargo.toml
contracts/prediction-market/programs/prediction-market/src/: errors.rs  lib.rs  state.rs
contracts/prediction-market/programs/txline-mock/: Cargo.toml
contracts/prediction-market/programs/txline-mock/src/: lib.rs
demo/: .gitignore  README.md  assemble.mjs  captions.mjs  closing.html  code.html  narration.md  opening.html  out-bet.txt  out-payout.txt  out-tests.txt  package.json  record.mjs  terminal.html  youtube-metadata.md
docs/: ARCHITECTURE.md  DEMO_VIDEO_SCRIPT.md  GoalChain-Design.html  SUBMISSION_CHECKLIST.md  TXLINE_INTEGRATION.md
frontend/: .env.example  .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
scripts/: bootstrap-devnet-markets.mjs  package-lock.json  package.json  smoke-test-bet.mjs  subscribe-devnet.ts  sync-live-markets.mjs  txline-subscribe.mjs  verify-payout-devnet.mjs
(+46 files in other folders)
