[package]
name = "prediction-market"
version = "0.1.0"
description = "Solana Anchor prediction market with TxLINE oracle CPI settlement — World Cup Hackathon"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "prediction_market"

[features]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
